Update multiple style fixes
Fixed links at top for mobile view, fixed sidebar overlap on zoom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,9 +495,9 @@ label {
 }
 
 @media screen and (max-width: 991px) {
-   .w-nav[data-collapse=medium] .w-nav-menu {
+   /* .w-nav[data-collapse=medium] .w-nav-menu {
     display: none
-  }
+  } */
   .w-nav[data-collapse="medium"] .w-nav-button {
     display: block;
   }
@@ -1583,7 +1583,7 @@ ol.numbered-list li {
   }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1280px) {
   .footnote {
     font-size: 13px;
   }
@@ -1710,7 +1710,7 @@ ol.numbered-list li {
     display: -ms-flexbox;
     display: flex;
   }
-  /*  .navigation-wrap {
+   /* .navigation-wrap {
     padding-right: 30px;
     padding-left: 30px
   }
@@ -1723,7 +1723,7 @@ ol.numbered-list li {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center
-  }*/
+  } */
 }
 
 @media screen and (max-width: 767px) {
@@ -1854,19 +1854,6 @@ ol.numbered-list li {
   }
 }
 
-@media screen and (max-width: 900px) {
-  #sidebar {
-    visibility: hidden;
-    opacity: 0;
-    /* transition: visibility 0s, opacity 0.5s linear; */
-  }
-
-  #case-study {
-    width: 100%;
-    padding: 0 1%;
-  }
-}
-
 @media screen and (max-width: 600px) {
   .footnote {
     font-size: 9px;
@@ -1911,6 +1898,27 @@ ol.numbered-list li {
 
   .hero-image-right {
     width: 340px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  #sidebar {
+    visibility: hidden;
+    opacity: 0;
+    /* transition: visibility 0s, opacity 0.5s linear; */
+  }
+
+  #case-study {
+    width: 100%;
+    padding: 0 1%;
+  }
+
+  p {
+    font-size: 1.5rem;
+  }
+
+  .w-container {
+    max-width: 728px;
   }
 }
 
